<resources>
    <string name="app_name">pokedex</string>
    <string name="inicioSesion">Inicio de sesion</string>
    <string name="Email">Email</string>
    <string name="Pasword">Pasword</string>
    <string name="NuevoUsuario">¿Aun no tienes cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="stringPrueba">esta es una prueba</string>
    <string name="funciona">Funciona</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registrar">registrar</string>
    <string name="misCitas">Mis citas</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="morado">#7E57C2</string>
    <string name="blanco">#FFFFF</string>
    <string name="blanquito">#FFFFFF</string>
    <string name="fire">#FF2751</string>
    <string name="RojoClaro">#FF728C</string>


    <string name="water">#00ACC1</string>
    <string name="grass">#66BB6A</string>
    <string name="bug">#26A69A</string>
    <string name="flying">#42A5F5</string>
    <string name="colorPrueba">#EC407A</string>
    <string name="normal">#EC407A</string>
    <string name="rojito">#FF2751</string>
    <string name="negro">#4D4D4D</string>


    <string name="uno">#EC407A</string>
    <string name="dos">#26A69A</string>
    <string name="tres">#9CCC65</string>
    <string name="cuatro">#EF5350</string>
    <string name="cinco">#FFEE58</string>
    <string name="fondNeutro">#DADADA</string>
    <string name="ghost">#9575CD</string>
    <string name="ice">#4DD0E1</string>
    <string name="dark">#3A3A3A</string>
    <string name="electric">#FFD54F</string>
    <string name="fairy">#F06292</string>
    <string name="fighting">#29B6F6</string>
    <string name="ground">#A25F50</string>
    <string name="rock">#665A5A</string>
    <string name="poison">#AB47BC</string>
    <string name="steel">#797979</string>
    <string name="psychic">#5C6BC0</string>
    <string name="dragon">#FF2751</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer euismod imperdiet leo et tempus. Donec quis lectus efficitur, blandit odio ac, egestas lorem. Suspendisse quis feugiat ex, ac venenatis nisl. Sed in elementum magna. Nullam suscipit a odio vitae facilisis. Vestibulum pharetra enim at dapibus pellentesque. Maecenas eget orci vel nulla ultricies hendrerit non at risus.  Curabitur justo orci, mollis dignissim metus suscipit, ornare condimentum eros. Sed vitae augue et leo tincidunt semper. Nullam quis maximus nisi. Praesent erat neque, tempus sit amet lorem sodales, semper pulvinar mauris. Pellentesque sed venenatis ligula. Suspendisse potenti. Nulla ut molestie est. Etiam ullamcorper mollis augue nec porta.</string>
    <string name="error">error en el servidor</string>


</resources>
