<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparente"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/inicioSesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparente"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Nombre completo"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"></EditText>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Correo"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"></EditText>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Clave"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:inputType="textPassword"></EditText>

        <Button
            android:id="@+id/btnIngresar"
            android:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:paddingTop="12dp"
            android:text="@string/ingresar"
            android:textColor="@color/Blanco"></Button>

        <TextView
            android:id="@+id/tvNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NuevoUsuario"></TextView>


    </LinearLayout>


</LinearLayout>